# downsample-qt

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  downsampler.cpp  downsampler.h  spscdataringbuffer.h
test/: CMakeLists.txt  main.cpp
test/console/: CMakeLists.txt  main.cpp
test/gui/: CMakeLists.txt  dataplotwindow.cpp  dataplotwindow.h  main.cpp
